fix(Canvas): Avoid flickering in @patternfly/react-topology
When rendering the graph, we can see some flickering in a few
situations:

1. The app is loaded for the first time or refreshed
2. Switching between no routes in the canvas and a adding a route
3. Navigating to a pages and go backto the design page
4. Disabling and enabling steps in the canvas
5. Switching the layout between horizontal and vertical

The fix for those situations is:
1. Adding an `initialized` state to

--- a/packages/ui/src/components/Visualization/Canvas/Canvas.scss
+++ b/packages/ui/src/components/Visualization/Canvas/Canvas.scss
@@ -4,3 +4,13 @@
     border: none;
   }
 }
+
+.canvas-empty-state {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+}
+
+.hidden {
+  visibility: hidden;
+}
