--- a/packages/ui/src/components/Visualization/ContextToolbar/Flows/FlowsMenu.scss
+++ b/packages/ui/src/components/Visualization/ContextToolbar/Flows/FlowsMenu.scss
@@ -1,7 +1,8 @@
 .flows-menu-display {
   display: inline-grid;
-  max-width: 200px;
+  max-width: 300px;
   margin: 0 8px;
+  text-align: left;
 }
 
 .flows-menu-truncate {
